v1.05
    - Fixed bug where addons stored on curseForge with no "gameFlavor" would cause an error when updating/installing. It now picks the latest file it can, that matches as many of the criteria as possible. Prioritising correct gameFlavor and non-alternative files, as well as any user settings.

v1.04
    - Fixed bug where missing gameflavor from curseforge was causing errors when trying to update
    - Fixed bug where having a version of java 1.8-1.11 would cause the auto-updater to incorrectly use the installed version of java instead of the bundled one (failing to properly update)
    - Added "Do not show this message again" option to filter out already seen emergency broadcasts
    - Updated EmergencyBroadcasts to include messageId

v1.03
    - Fixed bug where selecting install location manually would lead to addons being installed in the wrong subfolder
    - Fixed bug where addons with certain special characters in their name would not properly install
    - Changed the system for downloading files, should be faster and hopefully deals with failed downloads and abnormal HTTP/IO problems more cleanly
    - Fixed a bug where API reseponses from Curseforge with no "gameflavor" specification were causing failed update checking
    - Updated the DataCollectionException and Log functionality to properly present all relevant information in case of exceptions
    - Updated the auto-conversion that figures out projectIDs based on URLS. Performs a progressive search now, leading to much better odds of detecting the right projectID
    - Fixed a bug where a missing downloads folder would cause a FileNotFoundException
    - Added a Chrome based User-Agent to HTMLUnit

v1.00
    - Fixed issue with manual install location selection
    - Made the program check for existing Java installations of version 8 or higher

v0.99
    - Overhauled UI totally
    - You can now search for Tukui, WowInterface, and Curse addons in the same view